--- a/HtmlAndCss/MyFirstWeb/index.html
+++ b/HtmlAndCss/MyFirstWeb/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>My First Web</h1>
+
+    <script src="./main.js"></script>
 </body>
 </html>
